src/objects/slmt__Sales_Meeting_Configuration__mdt.object
<CustomObject>
    <description>Custom metadata to store the sales meeting configuration</description>
    <fields>
        <fullName>slmt__card_carousel_infinite_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies in the card carousel has an infinite behaviour</description>
        <inlineHelpText>Specifies in the card carousel has an infinite behaviour</inlineHelpText>
        <label>Card Carousel Infinite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>slmt__card_carousel_slides_number__c</fullName>
        <description>Specifies the number of slides to display without scrolling</description>
        <inlineHelpText>Specifies the number of slides to display without scrolling</inlineHelpText>
        <label>Card Carousel Slides Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>slmt__default_selected_card_id__c</fullName>
        <description>Unique identifier of the item to be set as selected when the sales meeting is initialized</description>
        <inlineHelpText>Unique identifier of the item to be set as selected when the sales meeting is initialized</inlineHelpText>
        <label>Default Selected Item Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slmt__error_message_custom_label_id__c</fullName>
        <description>API Name of the custom label that will contain the text to display if there is an error setting the sales meeting information</description>
        <inlineHelpText>API Name of the custom label that will contain the text to display if there is an error setting the sales meeting information</inlineHelpText>
        <label>Error Message API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slmt__sales_meeting_config_id__c</fullName>
        <description>Unique identifier of the sales meeting configuration</description>
        <inlineHelpText>Unique identifier of the sales meeting configuration</inlineHelpText>
        <label>Configuration Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Sales Meeting Configuration</label>
    <pluralLabel>Sales Meeting Configurations</pluralLabel>
</CustomObject>